WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262668
[WebGPU] RenderPassEncoder::drawIndexed does not support firstIndex
https://bugs.webkit.org/show_bug.cgi?id=262668
Summary
[WebGPU] RenderPassEncoder::drawIndexed does not support firstIndex
Mike Wyrzykowski
Reported
2023-10-04 17:25:33 PDT
[WebGPU] RenderPassEncoder::drawIndexed does not support firstIndex
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-04 17:25:48 PDT
<
rdar://problem/116494803
>
Mike Wyrzykowski
Comment 2
2023-10-04 17:34:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18663
EWS
Comment 3
2023-10-04 22:53:33 PDT
Committed
268898@main
(659f85098cf4): <
https://commits.webkit.org/268898@main
> Reviewed commits have been landed. Closing PR #18663 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug