[WebGPU] RenderPassEncoder::drawIndexed does not support firstIndex https://bugs.webkit.org/show_bug.cgi?id=262668 <radar://116494803>

Reviewed by Dan Glastonbury.

We had been ignoring the offset, combine it with the existing index
buffer offset which is in bytes.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::drawIndexed):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::drawIndexed):
(WebGPU::RenderPassEncoder::setBindGroup):

Canonical link: https://commits.webkit.org/268898@main